--- a/TheMartian.ipynb
+++ b/TheMartian.ipynb
@@ -21,7 +21,23 @@
    "source": [
     "Mark Watney hat das Problem, dass er alleine auf <br>\n",
     "dem Mars zurück geblieben ist. <br>\n",
-    "<b>\n",
+    "<br>\n",
+    "Nun muss er mit der Nasa Nachrichten austauschen um <br>\n",
+    "seine Rettung zu planen.\n",
+    "\n",
+    "Dazu überlegt er wie man mit einem Rover auf die Literale<br>\n",
+    "der Hexadezimalzahlen zeigen kann, da die Kommunikation stumm erfolgt.\n",
+    "<br>\n",
+    "Lesen sie den Artikel:<br>\n",
+    "http://www.businessinsider.com/the-martian-hexidecimal-language-2015-9?IR=T\n",
+    "\n",
+    "- In welchem Winkel muss er die Literale aufstellen, damit er <br>\n",
+    "  16 Schilder aufstellen kann?\n",
+    "- Wieso ist es besser mit 16 Zeichen zu kommunizieren?\n",
+    "\n",
+    "Hexadezimale Zahlen bestehen aus 16 Zeichen: <br>\n",
+    "0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F\n",
+    "\n",
     "\n",
     "------------------------------------------------------\n",
     "Probleme von Mark Watney:\n",
@@ -53,24 +69,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H\n",
-      "a\n",
-      "l\n",
-      "l\n",
-      "o\n",
-      " \n",
-      "M\n",
-      "a\n",
-      "r\n",
-      "s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "string = \"Hallo Mars\"\n",
     "for char in string:\n",
@@ -91,18 +90,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(65, 66, 90)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ord(\"A\"), ord(\"B\"), ord(\"Z\")"
    ]
@@ -118,18 +106,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ord(\"Z\") - ord(\"A\")"
    ]
@@ -148,18 +125,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('0x41', '0x42', '0x5a')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hex(ord(\"A\")), hex(ord(\"B\")), hex(ord(\"Z\"))"
    ]
@@ -178,18 +144,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(hex(ord(\"A\")))"
    ]
@@ -206,18 +161,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'41'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hex(ord(\"A\")).replace(\"0x\", \"\")"
    ]
@@ -306,6 +250,112 @@
     "    for value in hex(ord(char)).replace(\"0x\", \"\"):\n",
     "        print(value)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Man kann einen String auch direkt in <br>\n",
+    "die Hexadezimale Darstellung überführen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def turns(hex_string, i, is_start=False):\n",
+    "    valid = [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\",\n",
+    "             \"a\", \"b\", \"c\", \"d\", \"e\", \"f\"]\n",
+    "    \n",
+    "    current_pos = valid.index(hex_string[i])\n",
+    "    \n",
+    "    if is_start:\n",
+    "        next_pos = 0\n",
+    "    else: \n",
+    "        next_pos = valid.index(hex_string[i+1])\n",
+    "        \n",
+    "    possible = abs(next_pos - current_pos)\n",
+    "    \n",
+    "    if current_pos < next_pos:\n",
+    "        alternative = abs((current_pos - next_pos)%16)\n",
+    "        if alternative < possible:\n",
+    "            print(\"{0} steps left\".format(alternative))\n",
+    "        else:\n",
+    "            print(\"{0} steps right\".format(possible))\n",
+    "    else:\n",
+    "        alternative = abs((next_pos - current_pos)%16)\n",
+    "        if alternative < possible:\n",
+    "            if is_start:\n",
+    "                print(\"{0} steps left\".format(alternative))\n",
+    "            else:\n",
+    "                print(\"{0} steps right\".format(alternative))\n",
+    "        else:\n",
+    "            if is_start:\n",
+    "                print(\"{0} steps right\".format(possible))\n",
+    "            else:\n",
+    "                print(\"{0} steps left\".format(possible))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'df'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"ß\"\n",
+    "hex_string = ''.join([hex(ord(char)) for char in string])\n",
+    "hex_string = hex_string.replace(\"0x\", \"\")\n",
+    "hex_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 steps left\n",
+      "2 steps right\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0 , len(hex_string)):\n",
+    "    if i is 0:\n",
+    "        turns(hex_string, i, True)\n",
+    "    if i is not len(hex_string)-1:\n",
+    "        turns(hex_string, i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
